<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/EstiloLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding_all"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        style="@style/EstiloTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:text="@string/app_title" />


    <Button
        android:id="@+id/button1"
        style="@style/EstiloBoton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="4dp"
        android:text="@string/boton_jugar"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button2"
        style="@style/EstiloBoton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="4dp"
        android:text="@string/boton_configurar"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button3"
        style="@style/EstiloBoton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="4dp"
        android:onClick="llancarAcercaDe"
        android:text="@string/boton_acercaDe"
        android:textAllCaps="false"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button4"
        style="@style/EstiloBoton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/boton_Salir"
        android:textAllCaps="false"
        android:textSize="18sp" />


    <android.gesture.GestureOverlayView
        android:id="@+id/gestures"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6936.39"
        android:fadeOffset="800"
        android:gestureColor="@color/colorPrimary"
        android:gestureStrokeType="multiple" />
</LinearLayout>